changes on spacing and side nav onscroll hover corrections is updates

--- a/styles/privacy/privacy.scss
+++ b/styles/privacy/privacy.scss
@@ -61,7 +61,7 @@
 }
 .head_theme {
     .head_theme {
-        font-size     : 24px;
+        font-size     : 20px;
         line-height   : 32px;
         font-weight   : 700;
         font-family   : acumin-pro, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -106,8 +106,8 @@
         margin-right    : 12px;
     }
     .heads {
-        margin-top   : 15px;
-        margin-bottom: 10px;
+        margin-top   : 10px;
+        margin-bottom: 0px;
         color        : rgba(0, 0, 0, .54);
         font-size    : 16px;
         font-weight  : 750;
@@ -140,10 +140,7 @@
     margin-left: 2px;
 
 }
-.linksz:hover
-{
-   color:#6450f0;
-}
+
 @media screen and (max-width: 427px) {
     .right_side {
         display: none !important;
@@ -171,6 +168,7 @@
        
     }
     .sidePadding {
+        color: #6450f0 ;
         .cb-factor__item_1 {
           display:flex;
           background-color: #6450f0 ;
