--- a/styles/privacy_/policy/GDPR.scss
+++ b/styles/privacy_/policy/GDPR.scss
@@ -61,17 +61,14 @@
 }
 .head_theme {
     .head_theme {
-        font-size     : 24px;
+        font-size     : 22px;
         line-height   : 32px;
         font-weight   : 700;
-        font-family   : acumin-pro, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
         letter-spacing: .27px;
-        margin-bottom : 15px;
+        margin-bottom : 5px;
         margin-top    : 0px;
         color         : #212121;
     }
-   
-   
         .cb-factor__item {
             width           : 12px;
             height          : 4px;
@@ -94,7 +91,6 @@
         color         : #212121;
     }
       }
-   
 .article {
     .cb-factor__item {
         width           : 12px;
@@ -107,7 +103,7 @@
     }
     .heads {
         margin-top   : 15px;
-        margin-bottom: 10px;
+        margin-bottom:20px;
         color        : rgba(0, 0, 0, .54);
         font-size    : 16px;
         font-weight  : 750;
@@ -125,7 +121,7 @@
     top     : 90px;
 }
 .head_right {
-    margin-left  : 2%;
+    margin-left  : 18PX;
     font-size    : 16px;
     font-weight  : 700;
     color        : #212121;
@@ -142,10 +138,7 @@
     font-size: 16px;
     display:flex !important;
 }
-.linksz:hover
-{
-   color:#6450f0;
-}
+
 @media screen and (max-width: 427px) {
     .right_side {
         display: none !important;
@@ -155,10 +148,12 @@
         margin-left: 0px;
     }}
     .p {
-        line-height: 30px;
+        line-height: 35px;
         color: #595959;
         font-weight: 400;
         font-size: 16px;
+        margin-bottom:25px;
+       
        
     }
     .cb-factor__item_1 {
@@ -173,9 +168,11 @@
        
     }
     .sidePadding {
+        color:#6450f0 ;
         .cb-factor__item_1 {
           display:flex;
           background-color: #6450f0 ;
+         
         }
         
     }
